# T2.2

./: README.md
.githooks/: pre-push
.github/workflows/: avisar-qa.yml  testes.yml
Audio/: .gitignore  CMakeLists.txt
Audio/main/: CMakeLists.txt  audio_manager.c  audio_manager.h  main.c  server.c  server.h
Client/: README.md  test_client.py
ESP-32-P4/Tela/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.backup  sdkconfig.old
Iluminacao/Tela/: CMakeLists.txt  README.md  sdkconfig
Iluminacao/Tela/main/: CMakeLists.txt  idf_component.yml
Iluminacao/Tela/main/header/: display_manager.h  http_server.h  led_sync.h  protocol.h
Iluminacao/Tela/main/source/: display_manager.c  http_server.c  led_sync.c  main.c  protocol.c  wifi_manager.c
Iluminacao/led/: CMakeLists.txt  compile_commands.json  platformio.ini
Motor_Fixo/: platformio.ini  src.code-workspace
Motor_Fixo/src/: main.cpp
Motor_Movel/: compile_commands.json  main.cpp  motor_movel.h  platformio.ini
Motor_Movel/Motor_Movel_CLI/: compile_commands.json  platformio.ini
Motor_Movel/Motor_Movel_Server/: platformio.ini
Motor_Movel/src/: main.cpp  motor_movel.h
docs/: Template_Documentacao_Camadas.docx  protocolo_jellyfish_V2.docx  protocolo_jellyfish_V3.docx
new_tests/: run_tests.sh
new_tests/audio/: test_audio_manager.c
new_tests/grafico/: test_http_server.c  test_protocol.c
new_tests/iluminacao/: test_lighting_manager.c
new_tests/motor_fixo/: motor_fixo.c  motor_fixo.h  test_motor_fixo.c
ods-communication/: README.md
scripts/: setup.sh
tests/: README.md  run_tests.sh
(+118 files in other folders)
