idf_component_register(
    SRCS
        "source/main.c"
        "source/display_manager.c"
        "source/protocol.c"
        "source/http_server.c"
        "source/wifi_manager.c"
        "source/esp_lcd_jd9365.c"
    INCLUDE_DIRS
        "header"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_lcd
        esp_driver_gpio
        esp_hw_support
        lvgl
        json
        freertos
        esp_timer
        espressif__esp_hosted
)
